	* src/plugins/AncestorChart.py: Add prefix (AC-) to styles.
	* src/plugins/AncestorChart2.py: Add prefix (AC2-) to styles.

	* src/MediaView.py (on_select_row): Mark translatable string;
	(popup_convert_to_private): Call self.load before returning.
	* src/ImageSelect.py (LocalMediaProperties.__init__, 
	GlobalMediaProperties.update_info): Mark translatable string.

2004-03-08  Don Allingham  <dallingham@users.sourceforge.net>
	* src/EditPerson.py: TreeView enhancements
	* src/PeopleModel.py: TreeView enhancements
	* src/PeopleView.py: TreeView enhancements
	* src/gramps_main.py: TreeView enhancements

2004-03-08  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/docgen/LPRDoc.py: Font autodetection: trying freefont,
	MS fonts, and then stock Gnome fonts.

2004-03-07  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/docgen/LPRDoc.py: Support for graphic reports.

2004-03-07  Don Allingham  <dallingham@users.sourceforge.net>
	* src/PeopleModel.py: New GenericTreeView based model
	* src/RelLib.py: metadata/people model support
	* src/gramps_main.py: PeopleModel support
	* src/PeopleView.py: PeopleModel support

2004-03-06  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/docgen/LPRDoc.py: Cell padding support. Images support 
	(requires CVS version of gnome-python).

2004-03-05  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/docgen/LPRDoc.py: Support for paragraph's margins and
	the first indent properties. Font-specific line spacing. 
	Padding in paragraphs.

2004-03-04  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/docgen/LPRDoc.py: New paragraph formatting algorithm.
	Proper alignment support (no implementation for justify yet).
	Switch to utf8 capable fonts. Enable monospace for formatted notes.

2004-03-03  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/docgen/LPRDoc.py: Superscript support, line breaks, 
	page breaks, paragraph leader, dirty alignment hack.

2004-03-02  Don Allingham  <dallingham@users.sourceforge.net>